# esp32-cam-yolo

./: .gitignore  README.md  pyproject.toml
arduino/WifiCam/: WifiCam.ino
py_esp32_cam_yolo3/: .gitignore  __init__.py  app.py  pyinstaller.py
